fix spacing of x/y tips

--- a/style.css
+++ b/style.css
@@ -43,12 +43,14 @@ li {
   grid-row: 1;
   grid-column: 2;
   width: 50px;
+  padding-left: 10px;
 }
 #tipsX {
   /* border: 1px solid; */
   height: 50px;
   /* text-align: center; */
   /* text-orientation:  */
+  margin-top: 30px;
 }
 #tipsX > ul {
   display: flex;
